# Ki-Prompts

./: LICENSE  README.md  config.py  data_loader.py  env.example  exceptions.py  funktionen.py  projekt_analyse.py  pyproject.toml  requirements-dev.txt  requirements.txt  skript_tools.py  template_tools.py  tkinter test.py
KI_Prompts_Allgemein/: Metaprompt_000.md  Prompt_001_HYDROSENTINEL_Senior-Systemarchitekt-für -oT-gestützte-Agrar-Datenpipelines.md  anleitung.yaml
KI_Prompts_LM_Studio/: 000 Data Analyst Fragestellung.preset.json  000 Data Analyst Tabellenstrucktur.preset.json  001 Data Analyst was fehlt was muss rein.preset.json  002 Data Analyst Clustering.preset.json  004 Data Analyst Datumstabelle.preset.json  004 Data Analyst Featuring Engeneering.preset.json  006 Data Analyst Drilldown.preset.json  01 Data Analyst Ziele und Fragen.preset.json  02 Data Analyst Datenerhebung.preset.json  03 Data Analyst Datenbereinigung.preset.json  04 DA Dashboard vorbereiten.preset.json  05 Data Analyst Datenvisualisierung.preset.json  06 Data Analyst Daten Storytelling.preset.json  07 Data Analyst Überwachung und Fehlerbehandlung.preset.json  100 Python COde suchen.preset.json  2 Dataanalyst VIEW Datenqualität prüfen.preset.json  3 Dateninterpretation.preset.json  Abscvhlussprüfung PowerBI.preset.json  Aufgaben db.preset.json  BasisPrompt.preset.json  Brutales Feedback.preset.json  DAN.preset.json  ELIZA2.preset.json  EXCEL Allgemein.preset.json  Explorative Datenanalyse.preset.json  Fragen zu Datensatz.preset.json  GEN ANALYSE.preset.json  JokeDB.preset.json  Lotto.preset.json  (+20 more)
(+75 files in other folders)
