[project]
name = "python_projekt_generator"
version = "0.1.0"
description = "Generator für Python-Projektstrukturen mit GitHub-Setup"
authors = ["Frank Albrecht <projekt_generator@watchkido.de>"]
readme = "README.md"
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]